Bug 29213 - gconv_parseconfdir is not y2038 aware
Summary: gconv_parseconfdir is not y2038 aware
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.36
Assignee: Adhemerval Zanella
URL:
Keywords:
: 29212 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-31 15:54 UTC by Adhemerval Zanella
Modified: 2022-06-01 17:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adhemerval Zanella 2022-05-31 15:54:32 UTC
When build for libc it still uses non-y2038 stat calls.
Comment 1 Adhemerval Zanella 2022-06-01 16:28:54 UTC
Fixed on 2.36.
Comment 2 Adhemerval Zanella 2022-06-01 17:21:35 UTC
*** Bug 29212 has been marked as a duplicate of this bug. ***